# perspective

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  compile.js  driver.html  package.json  tsconfig.json  webpack.config.js
bench/: CMakeLists.txt  bench.cpp
bindings/typescript/: perspective.ts  psp.async.d.ts  webassembly.d.ts  worker-loader.d.ts  worker.ts
cmake/: GTest.txt.in  benchmark.txt.in  boost.txt.in  flatbuffers.txt.in
docs/sample_schemas/: customers.wsd
schemas/flatbuffers/: schema.fbs
scripts/: build  build.py  dev_server  indent  test_typelist.py
src/cpp/: aggregate.cpp  aggspec.cpp  arg_sort.cpp  base.cpp  base_impl_linux.cpp  base_impl_win.cpp  column.cpp  comparators.cpp  compat.cpp  compat_impl_linux.cpp  compat_impl_osx.cpp  compat_impl_win.cpp  config.cpp  context_base.cpp  context_grouped_pkey.cpp  context_iterators.cpp  context_one.cpp  context_two.cpp  context_zero.cpp  custom_column.cpp  date.cpp  dense_nodes.cpp  dense_tree.cpp  dense_tree_context.cpp  dependency.cpp  extract_aggregate.cpp  filter.cpp  flat_traversal.cpp  gnode.cpp  gnode_state.cpp  logtime.cpp  main.cpp  mask.cpp  min_max.cpp  multi_sort.cpp  pool.cpp  port.cpp  pyutils.cpp  raii_impl_linux.cpp  raii_impl_osx.cpp  (+24 more)
src/include/perspective/: aggregate.h  aggspec.h  arg_sort.h  base.h  build_filter.h  color.h  column.h  comparators.h  compat.h  config.h  context_base.h  context_common.h  context_common_decls.h  context_grouped_pkey.h  context_handle.h  context_one.h  context_two.h  context_zero.h  custom_column.h  date.h  defaults.h  dense_nodes.h  dense_tree.h  dense_tree_context.h  dependency.h  env_vars.h  extract_aggregate.h  filter.h  filter_utils.h  first.h  flat_traversal.h  gnode.h  gnode_state.h  index.h  iterator.h  kernel_engine.h  mask.h  multi_sort.h  node_processor.h  partition.h  (+27 more)
src/include/schemas/flatbuffers/: schema_generated.h
test/: CMakeLists.txt  main.cpp  psp.cpp  scratch.cpp  test_types.h
