add_executable(psp_test psp.cpp main.cpp)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND NOT PSP_WASM_BUILD)
	target_compile_options(psp_test PRIVATE $<$<CONFIG:DEBUG>: -fprofile-arcs -ftest-coverage -fPIC -O0>)
	target_link_libraries(psp_test PRIVATE gtest tbb tbbmalloc psp $<$<CONFIG:DEBUG>:--coverage>)
else()
	target_link_libraries(psp_test gtest tbb tbbmalloc psp)
endif()

add_executable(scratch scratch.cpp)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND NOT PSP_WASM_BUILD)
	target_compile_options(scratch PRIVATE $<$<CONFIG:DEBUG>: -fprofile-arcs -ftest-coverage -fPIC -O0>)
	target_link_libraries(scratch PRIVATE gtest tbb tbbmalloc psp $<$<CONFIG:DEBUG>:--coverage>)
else()
	target_link_libraries(scratch gtest tbb tbbmalloc psp)
endif()